samples/wordpress-networkpolicy/02-allow-ingress-controller.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress
  namespace: wordpress-1
spec:
  podSelector:
    matchLabels:
      app: wordpress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: nginx-ingress
